--- a/src/index.html
+++ b/src/index.html
@@ -131,8 +131,8 @@
 </div>
 
 <div class="block-4" id="block-4">
-	<div class="container">
-		<div class="block-4__top">
+	<div class="block-4__top">	
+		<div class="container">
 			<div class="row">
 				<div class="col-lg-6">
 					<h3>Стримы и вебинары от ТЕ24 для всех</h3>
@@ -158,7 +158,9 @@
 				</div>
 			</div>	
 		</div>
-		<div class="block-4__bottom">
+	</div>
+	<div class="block-4__bottom">
+		<div class="container">
 			<div class="row">
 				<div class="col-lg-5">
 					<img class="block-4__computer" src="img/block-4_computer.png">
